classification machine learning.ipynb

--- a/classification hw.ipynb
+++ b/classification hw.ipynb
@@ -351,7 +351,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Users/roya/Downloads/Air_Traffic_Passenger_Statistics.csv\", encoding='latin-1')\n",
+    "df = pd.read_csv(\"***csv file***\", encoding='latin-1')\n",
     "df"
    ]
   },
